crates/templates/tests/snapshots/parse_arguments_test__render-13.snap
---
source: crates/templates/tests/parse_arguments_test.rs
description: Parse command with the no-force-default rule set
expression: output
---
parse_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -v|--version)
        version
        exit
        ;;
      -h|--help)
        usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done
  action="${1:-}"

  case $action in
    bar|baz|foo)
      action="foo"
      rargs_input=("${rargs_input[@]:1}")
      ;;
    -h|--help)
      usage
      exit
      ;;
    "")
      ;;
    *)
      action="foo"
      ;;
  esac
}
