crates/templates/tests/snapshots/parse_arguments_test__render-4.snap
---
source: crates/templates/tests/parse_arguments_test.rs
description: Parse commands with a required global option
expression: output
---
parse_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -h|--help)
        usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done
  action="${1:-}"

  case $action in
    bar)
      action="bar"
      rargs_input=("${rargs_input[@]:1}")
      ;;
    baz)
      action="baz"
      rargs_input=("${rargs_input[@]:1}")
      ;;
    foo)
      action="foo"
      rargs_input=("${rargs_input[@]:1}")
      ;;
    -h|--help)
      usage
      exit
      ;;
    "")
      usage >&2
      exit 1
  
      ;;
    *)
      printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid command: " "$action" >&2
      exit 1
      ;;
  esac
}
