crates/templates/tests/snapshots/parse_arguments_test__render-7.snap
---
source: crates/templates/tests/parse_arguments_test.rs
description: Parse command with multiple global options
expression: output
---
parse_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -h|--help)
        usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done
  while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in
      -f | --foo)
        rargs_foo+=("$2")
        shift 2
      -?*)
        printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid option: " "$key" >&2
        exit 1
        ;;
      *)
        if [[ "$key" == "" ]]; then
          break
        fi
        printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid argument: " "$key" >&2
        exit 1
        ;;
    esac
  done
}
